tests/unit/default/syntax-error/101-add-pk-table-parens-parens.e.t
---- IN ----
+PK%table()
---- OUT ----
---- ERR ----
syntax: expected <columns-ref-list-end> after `+PK%table(` near `)` at position 10 - at line 1
---- EXIT ----
1
